# GalaxyBuds-rs

./: .gitignore  Cargo.toml  README.md
examples/: find_my_buds.rs  receive.rs  send.rs
src/: lib.rs  model.rs
src/message/: ambient_mode.rs  anc_updated.rs  bud_property.rs  bytebuff.rs  debug.rs  equalizer.rs  extended_status_updated.rs  find_my_bud.rs  fit_check.rs  ids.rs  lock_touchpad.rs  manager.rs  message.rs  mod.rs  mute_earbud.rs  response.rs  set_noise_reduction.rs  set_touchpad_option.rs  simple.rs  simple_helper.rs  status_updated.rs  touch_updated.rs  touchpad_action.rs  usage_report.rs  voice_wakeup_listening_status.rs
src/utils/: array.rs  byteutil.rs  crc16.rs  mod.rs
