[package]
name = "galaxy_buds_live_rs"
version = "0.1.6"
authors = ["jojii <jojii@gmx.net>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
license-file = "LICENSE"
repository = "https://github.com/JojiiOfficial/GalaxyBudsLive-rs"
description = "The Galaxy Buds live bluetooth protocol reverse engineered"

[dependencies]
async-std = "1.7.0"
bluetooth-serial-port-async = "0.6.1"
